syntax = "proto3";

package pb;

option go_package = "./;pb";

// 发送私聊消息
// 终结点：/send_private_msg
message SendPrivateMsg {
  int64 user_id = 1;  // 对方 QQ 号
  int64 group_id = 2;  // 主动发起临时会话时的来源群号(可选, 机器人本身必须是管理员/群主)
  string message = 3;  // 主要发送的内容
  bool auto_escape = 4;  // 消息内容是否作为纯文本发送 ( 即不解析 CQ 码 ) , 只在 message 字段是字符串时有效
}