syntax = "proto3";

package pb;

option go_package = "./;pb";

// 心跳包的 status 字段的 stat 字段
message MetaStatusStatistics {
  uint64 packet_received = 1;  // 收包数
  uint64 packet_sent = 2;      // 收包数
  uint64 packet_lost = 3;      // 丢包数
  uint64 message_received = 4; // 消息接收数
  uint64 message_sent = 5;     // 消息发送数
  uint32 disconnect_times = 6; // 连接断开次数
  uint64 lost_times = 7;       // 连接丢失次数
  int64 last_message_time = 8; // 最后一次消息时间
}

// 心跳包上报中作为成员使用
message MetaStatus {
  bool app_initialized = 1;      // 程序是否初始化完毕
  bool app_enabled = 2;          // 程序是否可用
  bool plugins_good = 3;         // 插件正常(可能为 null)
  bool app_good = 4;             // 程序正常
  bool good = 5;                 // 运行正常
  bool online = 6;               // 是否在线
  MetaStatusStatistics stat = 7; // 统计信息
}

// 元事件上报
message MetaEvent {
  int64 time = 1;       // 事件发生的时间戳
  int64 self_id = 2;    // 收到事件的机器人 QQ 号
  string post_type = 3; // 上报类型
  // 心跳包
  optional string meta_event_type = 4; // 上报类型
  optional MetaStatus status = 5;      // 应用程序状态
  optional int64 interval = 6; // 距离上一次心跳包的时间(单位是毫秒)
  // 生命周期
  optional string sub_type = 7; // 子类型
}